--- a/DEV - Workflows/Prompts/github_spec_kit/sk__complete.yaml
+++ b/DEV - Workflows/Prompts/github_spec_kit/sk__complete.yaml
@@ -9,10 +9,10 @@ action: Run full SpecKit from spec to implementation with validation
 # OPERATING MODE
 # ─────────────────────────────────────────────────────────────────
 operating_mode:
-  execution: manual_with_approvals
-  approvals: after_each_step
   workflow: sequential
   workflow_compliance: MANDATORY
+  workflow_execution: manual_with_approvals
+  approvals: after_each_step
   tracking: progressive_task_checklists
   validation: checkpoint_verification
 
