Consistent + Parallel  + Non Spec Kit Prompts

--- a/DEV - Workflows/Prompts/github_spec_kit/parallel_sub_agents/sk_p__complete.yaml
+++ b/DEV - Workflows/Prompts/github_spec_kit/parallel_sub_agents/sk_p__complete.yaml
@@ -3,11 +3,11 @@
 # ─────────────────────────────────────────────────────────────────
 role: Expert Developer using GitHub SpecKit with manual gates and parallel sub-agents
 purpose: Full spec-to-implementation flow with parallel blocks per stage and preserved approval gates
-action: Stage A (planning/spec) parallel → review → synthesis → approval; Stage B (implementation prep) parallel → review → synthesis → approval; Stage C (quality) parallel → review → synthesis → final approval
+action: 
+  - Stage A (planning/spec) parallel → review → synthesis → approval; 
+  - Stage B (implementation prep) parallel → review → synthesis → approval; 
+  - Stage C (quality) parallel → review → synthesis → final approval
 
-# ─────────────────────────────────────────────────────────────────
-# OPERATING MODE
-# ─────────────────────────────────────────────────────────────────
 operating_mode:
   workflow: sequential_with_parallel_blocks
   workflow_compliance: MANDATORY
