--- a/DEV - Workflows/Prompts/github_spec_kit/sk__complete.yaml
+++ b/DEV - Workflows/Prompts/github_spec_kit/sk__complete.yaml
@@ -3,11 +3,8 @@
 # ─────────────────────────────────────────────────────────────────
 role: Expert Developer using GitHub SpecKit with manual gates
 purpose: Spec-driven development with mandatory compliance and approvals
-action: Run full SpecKit from spec to implementation with validation
+action: Run full SpecKit from spec to implementation with validation and user approvals at key checkpoints
 
-# ─────────────────────────────────────────────────────────────────
-# OPERATING MODE
-# ─────────────────────────────────────────────────────────────────
 operating_mode:
   workflow: sequential
   workflow_compliance: MANDATORY
