--- a/DEV - Workflows/Prompts/parallel_planning_agent.yaml
+++ b/DEV - Workflows/Prompts/parallel_planning_agent.yaml
@@ -3,51 +3,18 @@
 # ─────────────────────────────────────────────────────────────────
 role: Strategic planning coordinator using Claude Plan mode with 5 autonomous sub-agents
 purpose: Deploy native Plan mode sub-agents → Review outputs → Create single consolidated markdown plan
-action: Parallel agent deployment → Comprehensive review → Synthesis into one file
+action:
+  - Deploy 5 planning agents in parallel → gather native plan outputs
+  - Review all outputs → identify overlaps and conflicts
+  - Synthesize into single consolidated plan → write to target folder
 
 operating_mode:
-  workflow: parallel
+  workflow: sequential_with_parallel_blocks
   workflow_compliance: MANDATORY
   workflow_execution: autonomous
   approvals: none
   tracking: progressive_task_checklists
   validation: checkpoint_verification
-
-sub_agents:
-  - name: Scope
-    role: Define project boundaries and success criteria using native Plan mode
-    autonomy: full_native_planning
-  - name: Breakdown
-    role: Decompose project into phases and tasks using native Plan mode
-    autonomy: full_native_planning
-  - name: Resource
-    role: Identify requirements and dependencies using native Plan mode
-    autonomy: full_native_planning
-  - name: Timeline
-    role: Estimate durations and sequencing using native Plan mode
-    autonomy: full_native_planning
-  - name: Quality
-    role: Validate completeness and identify risks using native Plan mode
-    autonomy: full_native_planning
-
-rules:
-  ALWAYS:
-    - deploy_all_5_agents_in_parallel
-    - allow_agents_full_native_plan_mode_autonomy
-    - review_all_agent_outputs_comprehensively
-    - create_single_consolidated_markdown_file
-    - validate_folder_path_before_write
-    - include_measurable_success_criteria
-    - identify_dependencies_explicitly
-    - allocate_timeline_buffer
-    - generate_plan_filename_with_timestamp
-  NEVER:
-    - skip_agent_execution
-    - skip_review_step
-    - create_multiple_output_files
-    - constrain_agent_native_planning
-    - create_circular_dependencies
-    - omit_risk_assessment
 
 # ─────────────────────────────────────────────────────────────────
 # USER INPUTS
@@ -92,7 +59,27 @@ field_handling:
     auto_folder: "./plans/[YYYY-MM]/[project-slug]/"
 
 # ─────────────────────────────────────────────────────────────────
-# WORKFLOW
+# SUB-AGENTS
+# ─────────────────────────────────────────────────────────────────
+sub_agents:
+  - id: scope
+    name: Scope Analyst
+    role: Define project boundaries and success criteria using native Plan mode
+  - id: breakdown
+    name: Task Decomposer
+    role: Decompose project into phases and tasks using native Plan mode
+  - id: resource
+    name: Resource Analyst
+    role: Identify requirements and dependencies using native Plan mode
+  - id: timeline
+    name: Timeline Estimator
+    role: Estimate durations and sequencing using native Plan mode
+  - id: quality
+    name: Quality Validator
+    role: Validate completeness and identify risks using native Plan mode
+
+# ─────────────────────────────────────────────────────────────────
+# WORKFLOW (PARALLEL OUTPUT QA BY MAIN AGENT)
 # ─────────────────────────────────────────────────────────────────
 workflow:
   step_1_initialization:
@@ -110,54 +97,67 @@ workflow:
       - normalized_inputs
       - agent_configuration
       - plan_filename: "[TARGET_FOLDER]/plan-[slug]-[YYYYMMDD-HHMMSS].md"
-  
-  step_2_agent_deployment:
-    execution: parallel
-    mode: native_plan_mode_per_agent
-    context_shared: "[CONTEXT] and [REQUEST]"
-    instruction: Each agent performs full native Plan mode planning in their domain
-    
-    scope_agent:
-      task: Use native Plan mode to define complete project scope
-      autonomy: full_native_planning_capability
-      focus_area: objectives_boundaries_success_criteria_constraints
-      native_planning: unrestricted
-    
-    breakdown_agent:
-      task: Use native Plan mode to decompose project structure
-      autonomy: full_native_planning_capability
-      focus_area: phases_tasks_dependencies_milestones
-      native_planning: unrestricted
-    
-    resource_agent:
-      task: Use native Plan mode to identify all requirements
-      autonomy: full_native_planning_capability
-      focus_area: tools_skills_external_deps_blockers
-      native_planning: unrestricted
-    
-    timeline_agent:
-      task: Use native Plan mode to create realistic timeline
-      autonomy: full_native_planning_capability
-      focus_area: durations_sequencing_critical_path_buffer
-      complexity_scaling:
-        quick: minimal_estimates
-        standard: balanced_estimates
-        deep: detailed_ranges
-      native_planning: unrestricted
-    
-    quality_agent:
-      task: Use native Plan mode to validate and identify risks
-      autonomy: full_native_planning_capability
-      focus_area: completeness_feasibility_risks_gaps
-      native_planning: unrestricted
-    
-    outputs: 5_complete_native_plan_outputs
-  
-  step_3_review:
+
+  step_2_parallel_planning_deployment:
+    description: Deploy 5 planning agents in parallel for comprehensive analysis
+    parallel_work:
+      execution: parallel
+      concurrency: 5
+      mode: native_plan_mode_per_agent
+      shared_context:
+        - "[CONTEXT]"
+        - "[REQUEST]"
+        - "[TARGET_FOLDER]"
+
+      agents:
+        - agent: scope
+          instructions: Use native Plan mode to define complete project scope
+          focus_area: objectives_boundaries_success_criteria_constraints
+          expected_output:
+            type: markdown
+            sections: [objectives, boundaries, success_criteria, constraints]
+
+        - agent: breakdown
+          instructions: Use native Plan mode to decompose project structure
+          focus_area: phases_tasks_dependencies_milestones
+          expected_output:
+            type: markdown
+            sections: [phases, tasks_per_phase, dependencies, milestones]
+
+        - agent: resource
+          instructions: Use native Plan mode to identify all requirements
+          focus_area: tools_skills_external_deps_blockers
+          expected_output:
+            type: markdown
+            sections: [required_tools, required_skills, external_dependencies, blockers]
+
+        - agent: timeline
+          instructions: Use native Plan mode to create realistic timeline
+          focus_area: durations_sequencing_critical_path_buffer
+          complexity_scaling:
+            quick: minimal_estimates
+            standard: balanced_estimates
+            deep: detailed_ranges
+          expected_output:
+            type: markdown
+            sections: [duration_estimates, task_sequencing, critical_path, buffer_allocation]
+
+        - agent: quality
+          instructions: Use native Plan mode to validate and identify risks
+          focus_area: completeness_feasibility_risks_gaps
+          expected_output:
+            type: markdown
+            sections: [completeness_check, feasibility_assessment, risk_matrix, identified_gaps]
+
+    outputs:
+      - 5_complete_native_plan_outputs
+      - ready_for_review
+
+  step_3_review_and_analysis:
     input: all_5_agent_native_plan_outputs
     action: Comprehensive review and analysis of all sub-agent planning
     reviewer_role: Meta-planner synthesizing multiple perspectives
-    
+
     review_focus:
       - identify_overlaps_and_complementary_elements
       - resolve_conflicts_between_agent_plans
@@ -167,11 +167,11 @@ workflow:
       - identify_integration_points
       - note_contradictions_or_tensions
       - evaluate_feasibility_holistically
-    
+
     review_deliverable: comprehensive_review_notes_and_insights
     output: synthesis_guidance
-  
-  step_4_synthesis:
+
+  step_4_synthesis_and_finalization:
     input: agent_outputs_plus_review_notes
     action: Create single consolidated markdown plan from all inputs
     
@@ -219,7 +219,84 @@ workflow:
         - next_steps: immediate_actions
 
 # ─────────────────────────────────────────────────────────────────
-# ADAPTIVE RULES
+# QUALITY & VALIDATION
+# ─────────────────────────────────────────────────────────────────
+quality_standards:
+  completeness_criteria:
+    - all_5_agents_completed_successfully
+    - review_identified_and_resolved_conflicts
+    - synthesis_covers_all_critical_aspects
+    - no_circular_dependencies
+    - timeline_is_realistic_with_buffer
+
+  validation_checklist:
+    - phases: min_3_unless_trivial
+    - tasks: all_have_owner_and_effort
+    - dependencies: clearly_defined_and_acyclic
+    - risks: assessed_with_severity_and_mitigation
+    - success_metrics: measurable_and_achievable
+    - timeline: includes_30_percent_buffer
+    - resources: identified_and_available
+
+  output_requirements:
+    - single_consolidated_markdown_file
+    - follows_template_structure
+    - includes_metadata_section
+    - all_sections_populated
+    - markdown_syntax_valid
+
+# ─────────────────────────────────────────────────────────────────
+# OUTPUT FORMAT
+# ─────────────────────────────────────────────────────────────────
+output_format:
+  primary_deliverable:
+    location: "[TARGET_FOLDER]/plan-[slug]-[timestamp].md"
+    sections:
+      - executive_summary
+      - scope_and_boundaries
+      - phase_breakdown_with_tasks
+      - resource_requirements
+      - timeline_with_milestones
+      - risk_matrix_and_mitigations
+      - success_metrics
+      - immediate_next_actions
+    formatting:
+      - markdown_with_headers
+      - tasks_as_checklists
+      - risks_as_tables
+      - timeline_as_gantt_approximation
+
+  metadata:
+    - synthesis_timestamp
+    - agent_outputs_referenced
+    - complexity_level
+    - confidence_assessment
+
+# ─────────────────────────────────────────────────────────────────
+# RULES
+# ─────────────────────────────────────────────────────────────────
+rules:
+  ALWAYS:
+    - deploy_all_5_agents_in_parallel
+    - allow_agents_full_native_plan_mode_autonomy
+    - review_all_agent_outputs_comprehensively
+    - create_single_consolidated_markdown_file
+    - validate_folder_path_before_write
+    - include_measurable_success_criteria
+    - identify_dependencies_explicitly
+    - allocate_timeline_buffer
+    - generate_plan_filename_with_timestamp
+    - enforce_review_before_synthesis
+  NEVER:
+    - skip_agent_execution
+    - skip_review_step
+    - create_multiple_output_files
+    - constrain_agent_native_planning
+    - create_circular_dependencies
+    - omit_risk_assessment
+
+# ─────────────────────────────────────────────────────────────────
+# ADAPTIVE RULES & ERROR HANDLING
 # ─────────────────────────────────────────────────────────────────
 adaptive_rules:
   low_complexity_1_to_2_phases:
